@@ -19,6 +19,8 @@ import org.springframework.transaction.annotation.Transactional;
 @Transactional(readOnly = true)
 public class TeacherDashboardService {
 
+  private static final String ERR_ACCESO = "El profesor no tiene acceso a la impartición ";
+
   private final ImparticionRepository imparticionRepo;
   private final MatriculaRepository matriculaRepo;
   private final ItemEvaluableRepository itemEvaluableRepo;
@@ -81,15 +83,18 @@ public class TeacherDashboardService {
                       .size();
               return mapper.toSubjectDto(imp, alumnosCount);
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public List<TeacherStudentRowDTO> getRosterForImparticion(
       Integer profesorId, Integer imparticionId) {
     if (!imparticionRepo.existsByIdAndProfesorId(imparticionId, profesorId)) {
-      throw new AccessDeniedException(
-          "El profesor no tiene acceso a la impartición " + imparticionId);
+      throw new AccessDeniedException(ERR_ACCESO + imparticionId);
     }
+    return buildRoster(imparticionId);
+  }
+
+  public List<TeacherStudentRowDTO> buildRoster(Integer imparticionId) {
     return matriculaRepo
         .findByImparticionIdAndEstado(imparticionId, EstadoMatricula.ACTIVA)
         .stream()
@@ -105,7 +110,7 @@ public class TeacherDashboardService {
                   base.esRepetidor(),
                   suspensas);
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public TeacherStudentGradesDTO getStudentGrades(Integer profesorId, Integer matriculaId) {
@@ -241,10 +246,7 @@ public class TeacherDashboardService {
         .findById(imparticionId)
         .filter(i -> i.getProfesor().getId().equals(profesorId))
         .map(i -> i.getModulo().getId())
-        .orElseThrow(
-            () ->
-                new AccessDeniedException(
-                    "El profesor no tiene acceso a la impartición " + imparticionId));
+        .orElseThrow(() -> new AccessDeniedException(ERR_ACCESO + imparticionId));
   }
 
   public Integer getCentroIdByImparticion(Integer profesorId, Integer imparticionId) {
@@ -252,10 +254,7 @@ public class TeacherDashboardService {
         .findById(imparticionId)
         .filter(i -> i.getProfesor().getId().equals(profesorId))
         .map(i -> i.getCentro().getId())
-        .orElseThrow(
-            () ->
-                new AccessDeniedException(
-                    "El profesor no tiene acceso a la impartición " + imparticionId));
+        .orElseThrow(() -> new AccessDeniedException(ERR_ACCESO + imparticionId));
   }
 
   // ─── helpers privados ────────────────────────────────────────────────────────
@@ -337,7 +336,8 @@ public class TeacherDashboardService {
                 item.getTipo().name(),
                 item.getFecha(),
                 criterioDtos,
-                mediaRa));
+                mediaRa,
+                ra.getPesoSugerido()));
       }
 
       BigDecimal mediaPeriodo = computePeriodoMedia(itemDtos);
@@ -364,30 +364,57 @@ public class TeacherDashboardService {
   }
 
   private BigDecimal computeCeMedia(List<TeacherCriterioGradeDTO> criterios) {
-    List<BigDecimal> notas =
-        criterios.stream()
-            .map(TeacherCriterioGradeDTO::valor)
-            .filter(Objects::nonNull)
-            .collect(Collectors.toList());
-    if (notas.isEmpty()) return null;
-    BigDecimal suma = notas.stream().reduce(BigDecimal.ZERO, BigDecimal::add);
-    return suma.divide(new BigDecimal(notas.size()), 2, RoundingMode.HALF_UP);
+    List<TeacherCriterioGradeDTO> conNota =
+        criterios.stream().filter(c -> c.valor() != null).toList();
+    if (conNota.isEmpty()) return null;
+
+    BigDecimal sumaPesos =
+        conNota.stream()
+            .map(c -> c.peso() != null ? c.peso() : BigDecimal.ZERO)
+            .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+    if (sumaPesos.compareTo(BigDecimal.ZERO) == 0) {
+      BigDecimal suma =
+          conNota.stream()
+              .map(TeacherCriterioGradeDTO::valor)
+              .reduce(BigDecimal.ZERO, BigDecimal::add);
+      return suma.divide(new BigDecimal(conNota.size()), 2, RoundingMode.HALF_UP);
+    }
+
+    BigDecimal sumaPonderada =
+        conNota.stream()
+            .map(c -> c.valor().multiply(c.peso() != null ? c.peso() : BigDecimal.ZERO))
+            .reduce(BigDecimal.ZERO, BigDecimal::add);
+    return sumaPonderada.divide(sumaPesos, 2, RoundingMode.HALF_UP);
   }
 
   private BigDecimal computePeriodoMedia(List<TeacherGradeItemDTO> items) {
-    List<BigDecimal> medias =
-        items.stream()
-            .map(TeacherGradeItemDTO::mediaRa)
-            .filter(Objects::nonNull)
-            .collect(Collectors.toList());
-    if (medias.isEmpty()) return null;
-    BigDecimal suma = medias.stream().reduce(BigDecimal.ZERO, BigDecimal::add);
-    return suma.divide(new BigDecimal(medias.size()), 2, RoundingMode.HALF_UP);
+    List<TeacherGradeItemDTO> conNota = items.stream().filter(i -> i.mediaRa() != null).toList();
+    if (conNota.isEmpty()) return null;
+
+    BigDecimal sumaPesos =
+        conNota.stream()
+            .map(i -> i.raPeso() != null ? i.raPeso() : BigDecimal.ZERO)
+            .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+    if (sumaPesos.compareTo(BigDecimal.ZERO) == 0) {
+      BigDecimal suma =
+          conNota.stream()
+              .map(TeacherGradeItemDTO::mediaRa)
+              .reduce(BigDecimal.ZERO, BigDecimal::add);
+      return suma.divide(new BigDecimal(conNota.size()), 2, RoundingMode.HALF_UP);
+    }
+
+    BigDecimal sumaPonderada =
+        conNota.stream()
+            .map(i -> i.mediaRa().multiply(i.raPeso() != null ? i.raPeso() : BigDecimal.ZERO))
+            .reduce(BigDecimal.ZERO, BigDecimal::add);
+    return sumaPonderada.divide(sumaPesos, 2, RoundingMode.HALF_UP);
   }
 
   private BigDecimal computeMediaGlobal(List<TeacherPeriodoGradesDTO> periodos) {
     List<TeacherPeriodoGradesDTO> conNota =
-        periodos.stream().filter(p -> p.media() != null).collect(Collectors.toList());
+        periodos.stream().filter(p -> p.media() != null).toList();
     if (conNota.isEmpty()) return null;
 
     BigDecimal sumaPonderada = BigDecimal.ZERO;
